<resources>
    <string name="app_name">礼物说</string>

    <string name="home_name">指南</string>
    <string name="select_name">热门</string>
    <string name="category_name">分类</string>
    <string name="profile_name">我的</string>
    <string name="title_content">热门</string>
    <string name="profile_cart">购物车</string>
    <string name="profile_order">订单</string>
    <string name="profile_coupon">礼券</string>
    <string name="profile_service">客服</string>
</resources>
