<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/profile_fragment_rl"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@mipmap/bg_profile">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@mipmap/icon_message" />

        <ImageView
            android:id="@+id/profile_fragment_setting_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:src="@mipmap/me_settings" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toLeftOf="@id/profile_fragment_setting_iv"
            android:src="@mipmap/icon_scan" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/me_avatar_girl" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profile_fragment_rl"
        android:background="@color/select_background"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/profile_fragment_rg"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/icon_cart"
                    android:gravity="center"
                    android:text="@string/profile_cart"
                    android:textSize="@dimen/profile_cart"

                    />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/icon_order"
                    android:gravity="center"
                    android:text="@string/profile_order"
                    android:textSize="@dimen/profile_cart" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/icon_coupon"
                    android:gravity="center"
                    android:text="@string/profile_coupon"
                    android:textSize="@dimen/profile_cart" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/icon_service"
                    android:gravity="center"
                    android:text="@string/profile_service"
                    android:textSize="@dimen/profile_cart" />

            </RadioGroup>

            <android.support.design.widget.TabLayout
                android:id="@+id/profile_fragment_tab"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/profile_fragment_rg"
                android:layout_marginTop="10dp"
                android:background="#ffffff" />


            <android.support.v4.view.ViewPager
                android:id="@+id/profile_fragment_vp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_fragment_tab" />


        </RelativeLayout>

    </ScrollView>


</RelativeLayout>